Fix privacy information dropdown on Safari

--- a/indico/web/client/styles/themes/indico.scss
+++ b/indico/web/client/styles/themes/indico.scss
@@ -407,6 +407,7 @@ ul.day-list {
   .privacy-dropdown {
     display: inline-block;
     position: relative;
+    outline: none;
 
     .menu {
       display: none;
